# ocaml-cordova-facebook-connect-plugin

./: README.md  cordova-facebook-plugin.opam  dune-project  facebook-connect-plugin.opam
.github/workflows/: main.yml
src/: dune  facebook_connect_plugin.mli  fb.mli
